kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travel-app
  labels:
    name: travel-app
    app: wandertogether-travel-app
